Changed portfolio.js to projects.js, fixed margin spacing on the home page, removed the contact page for now and added new styling to the nav tabs

--- a/src/App.css
+++ b/src/App.css
@@ -19,18 +19,6 @@ p {
   }
 }
 
-.aboutinfo > p {
-  margin-top: 1%;
-  line-height: 2em;
-}
-
-.aboutme {
-  font-family:Georgia, 'Times New Roman', Times, serif;
-  font-size: 16px;
-  width: 60%;
-  margin: auto;
-}
-
 .contact {
   padding-top: 50px;
 }
