--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -41,6 +41,24 @@ html {
     padding: .7%;
   }
 
+  .nav-link:hover {
+    border-color: rgb(170, 201, 216) !important;
+    color: rgb(170, 201, 216) !important;
+  }
+
+  .nav-link.active {
+    color: black;
+  }
+
+  
+  .info {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 3%;
+  }
+
   .about {
     padding-top: 20px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -49,20 +67,29 @@ html {
   
   .aboutinfo {
     text-align: left;
+    margin-top: 3%;
+    line-height: 2;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
+  .aboutme {
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 16px;
+  }
+
+  .aboutmyself {
+    margin-top: 1%;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 16px;
   }
 
 .self {
-    margin-left: 35%;
+    margin-left: 10%;
+    margin-top: 1%;
     height: 30%;
     width: 30%;
-  }
-
-  .info {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    flex-wrap: wrap;
-    margin-bottom: 5%;
   }
   
   .nav-tabs {
@@ -121,11 +148,11 @@ html {
     line-height: 2;
   }
 
-  .portfolio {
+  .projectspage {
     line-height: 2;
   }
 
-  .portfolio > h1 {
+  .projectspage > h1 {
     margin-bottom: 3%;
     margin-top: 1%;
   }
